# SmartToDoList-CPP

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LEARNING.md  LICENSE  README.md  SECURITY.md  smart_to_do_list.cpp
.github/workflows/: ci.yml
include/: todo.h
src/: CMakeLists.txt  main.cpp  todo.cpp
tests/: CMakeLists.txt  test_todo.cpp
